<resources>
    <string name="app_name">Meru University</string>
    <string name="title_main_fragment">Meru University</string>
    <string name="title_library_fragment">Library</string>
    <string name="title_academics_fragment">Academics</string>
    <string name="title_timetable_fragment">Timetable</string>
    <string name="title_eclass_fragment">E Class</string>
    <string name="title_exchange_fragment">MUST Exchange</string>
    <string name="title_news_and_events_fragment">News &amp; events</string>
    <string name="title_student_union_fragment">Student union</string>
    <string name="title_finance_fragment">Finance</string>
    <string name="title_staff_fragment">Staff</string>
    <string name="title_email_fragment">Email</string>
    <string name="title_campus_map_fragment">Campus map</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_help_and_feedback_fragment">Help &amp; feedback</string>
    <string name="title_digital_collections_fragment">Library - Digital collections</string>
    <string name="title_ejournals_fragment">Library - E-Journals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_action_library">Library</string>
    <string name="drawer_action_academics">Academics</string>
    <string name="drawer_action_finance">Finance</string>
    <string name="drawer_action_timetable">Timetable</string>
    <string name="drawer_action_eclass">E Class</string>
    <string name="drawer_action_overstack">Overstack</string>
    <string name="drawer_action_news_and_events">News &amp; events</string>
    <string name="drawer_action_staff">Staff</string>
    <string name="drawer_action_student_union">Student union</string>
    <string name="drawer_action_email">Email</string>
    <string name="drawer_action_campus_map">Campus map</string>
    <string name="drawer_action_settings">Settings</string>
    <string name="drawer_action_help_and_feedback">Help &amp; feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_action_accomodation">Accomodation</string>
    <string name="title_accomodation_fragment">Accomodation</string>
    <string name="action_search">Search</string>
    <string name="action_opening_hours">Opening hours</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="top_course_read_header">Top books read in your course</string>
    <string name="action_recent_books">Recent books</string>
    <string name="action_library_guide">Library guide</string>
    <string name="action_renew_a_book">Renew a book</string>
    <string name="action_give_feedback">Give feedback</string>
    <string name="button_ejournals">E - Journals</string>
    <string name="button_digital_collections">Digital Collections</string>
    <string name="placeholder_authors">Authors : G.K Tosh, H.J Wills and Peter M.K Nell.</string>
    <string name="placeholder_book_title">Book title here</string>
    <string name="button_downloads">Downloads</string>
    <string name="action_about_us">About us</string>
    <string name="action_contacts">Contacts</string>
    <string name="button_semester_dates">Semester Dates</string>
    <string name="button_schools_and_departments">Schools and Departments</string>
    <string name="button_programs">Programs</string>
    <string name="button_intakes">Intakes</string>
    <string name="iso">MUST is ISO 9001:2008 Certified</string>
    <string name="title_activity_starter">Meru University</string>
    <string name="hello_world">Hello world!</string>
    <string name="is_first_run">first_run</string>
    <string name="label_registration_number">Registration No.</string>
    <string name="label_password">Password</string>
    <string name="hint_registration_number">Registration number</string>
    <string name="action_directions">Directions</string>
    <string name="title_fragment_starter">Meru University</string>
    <string name="authenticating">Authenticating...</string>
    <string name="your_details">Your details</string>
    <string name="empty_fields_toast">You must fill all fields!!</string>
    <string name="no_connection">No internet connection! Tap to Retry</string>
    <string name="button_retry">Retry</string>
    <string name="button_report">Report</string>
    <string name="authentication_error">Authentication error!</string>
    <string name="pref_user_number">number</string>
    <string name="pref_user_password">password</string>
    <string name="button_guest_access">Guest access</string>
    <string name="button_login">Login</string>
    <string name="button_reset_password">Reset password</string>
    <string name="pref_user_name">name</string>
    <string name="pref_user_program">program</string>
    <string name="pref_user_program_code">program_code</string>
    <string name="suggested_books">Suggested books</string>
    <string name="action_share_books">Share books</string>
    <string name="loading_more">Loading more...</string>
    <string name="book_download_message">Preparing document for reading, Please wait...</string>
    <string name="book_openning_error">Unable to open the book. Make sure you have a pdf reader installed in your phone</string>
    <string name="title_activity_searchable">Search results</string>
    <string name="search_result">Search results</string>
    <string name="button_search_more">Find more</string>
    <string name="my_results">My results</string>
    <string name="sample_academic_news">Results for Academic year 2014/2015 semester 2 will be out on 20th Oct 2015.</string>
    <string name="academics_notice_board">SPAS Notice Board</string>
    <string name="register_units">Register units</string>
    <string name="my_grades">My grades</string>
    <string name="no_connection_message">Connection Error!!!\nPlease check your Network Status.</string>
    <string name="pref_user_school_code">schoolCode</string>
    <string name="paceholder_time">Monday, Dec 25, 2015</string>
    <string name="pref_user_intake_year">intakeYear</string>
    <string name="pref_user_intake_month">intakeMonth</string>
    <string name="place_holder_grades_heading">Year One Results</string>
    <string name="most_read_updates">Most read updates</string>
    <string name="action_programs">Programs</string>
    <string name="title_programs_fragment">Programs</string>
    <string name="title_downloads_fragment">Downloads</string>
    <string name="title_intakes_fragment">Intakes</string>
    <string name="title_semester_dates_fragment">Semester dates</string>
    <string name="heading_suggested">Suggested...</string>
    <string name="button_download_fee_structure">Download fee structure</string>
    <string name="heading_finance_notice_board">Finance Notice Board</string>
    <string name="action_my_fee_statement">My fee balance</string>
    <string name="heading_accomodation_notice_board">Rentals available around</string>
    <string name="button_book_school_hostels">Book school hostels</string>
    <string name="button_library">Library</string>
    <string name="clickable_text_view_going">Going</string>
    <string name="label_new_students">New Students</string>
    <string name="button_continue">Continue</string>
    <string name="heading_about_app">What is this ????.</string>
    <string name="app_information">Hello there, thank you for downloading this app. This app is under development, and therefore not an official Android App for Meru University, you are only using it for testing purposes.</string>
    <string name="inaccurate_data_warning">Some data provided might not be accurate.</string>
    <string name="services">However the app has the following to offer :</string>
    <string name="pastpapers_services">2. Download and read pastpapers in your phone.</string>
    <string name="timetable_services">3. View or download your class timetable .</string>
    <string name="news_and_events_services">4. Receive notifications on news and events in school.</string>
    <string name="news_and_events_reading_services">5. Read news and event updates.</string>
    <string name="tutorials_services">6. Stream video tutorials.</string>
    <string name="feestructure_services">7. View or download your Fee Structure.</string>
    <string name="keep_checking">Make sure you keep checking with us. There will be a weekly release with more features and fixed errors.</string>
    <string name="more_features">MORE FEATURES AND SERVICES COMING UP SOON.</string>
    <string name="notes_services">1. Download, read and share lecture notes.</string>
    <string name="semester_dates_services">8. View semester dates.</string>
    <string name="drawer_action_exchange">Exchange</string>
    <string name="drawer_action_about">About</string>
    <string name="system_name">Android University Access System (AUAS).</string>
    <string name="system_version">Version 1.0.24</string>
    <string name="about_intro">This is the beta version of the UNOFFICIAL Meru University Android App. It is still evolving and we are committed to making it a little better each day.</string>
    <string name="about_crash">Crash reports are automatically reported back to the developer. Bugs can also be reported by writing feedback to the developer.</string>
    <string name="label_open_source">Open Source</string>
    <string name="about_open_source_intro">The following are attribution notices for third party libraries that may be contained in portions of the AUAS product. Thanks to the open source community for all their contributions..</string>
    <string name="label_picasso">Picasso</string>
    <string name="about_picasso_info">Copyright 2013 Square, inc.\nLicense: Apache 2.0\nWebsite: square.github.io/picasso/</string>
    <string name="custom_name">Meru University Android App.</string>
    <string name="custom_version">Version 2.0.1</string>
    <string name="about_label_development">Development</string>
    <string name="label_developer">Developer</string>
    <string name="about_developer_info">Developed by Anthony Ngure Wambui.\nEmail:\nanthonyngure25@gmail.com.\nPhone:\n+254723203475.</string>
    <string name="label_support">Support and Credit</string>
    <string name="about_support_intro">Credit goes to the following guys for their full and dedicated support in Database Administration and App Testing. This app could not have come this far without them.</string>
    <string name="about_makau_info">William Makau Kitivi.\nEmail:\nwilliammakau070@gmail.com.\nPhone:\n+254706356815.</string>
    <string name="about_wamenju_info">Peter Wamenju Wanderi.\nEmail: peterwamenju01@gmail.com.\nPhone:\n+254712653633.</string>
    <string name="about_system_info">AUAS is an Education System based on Android Operating System for mobile phones. It\'s customizable for higher learning institutions.....</string>
    <string name="pref_user_stage">user_stage</string>
    <string name="action_my_infor">My information</string>
    <string name="pref_default_user_program">Bachelor Of Science In Mathematics and Computer Science.</string>
    <string name="pref_default_program_code">BMC (as they appear on timetables).</string>
    <string name="pref_user_default_stage">Y3S1</string>
    <string name="drawer_action_media">Media</string>
    <string name="drawer_action_gallery">Gallery</string>
    <string name="drawer_action_news">News</string>
    <string name="drawer_action_events">Events</string>
    <string name="drawer_action_books">Books</string>
    <string name="drawer_action_notes">Notes</string>
    <string name="drawer_action_pastpapers">Papers</string>
    <string name="drawer_action_teaching">Teaching</string>
    <string name="drawer_action_exam">Exam</string>
</resources>