<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".NavigationDrawerFragment">

    <LinearLayout
        android:id="@+id/fragment_navigation_drawer_cover_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_profile_height"
        android:padding="@dimen/default_container_padding"
        android:layout_marginBottom="@dimen/default_bottom_margin"
        android:onClick="changeCoverImage"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

            <com.mustmobile.util.RoundImage
                android:id="@+id/fragment_navigation_drawer_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_profile"/>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/fragment_navigation_drawer_profile_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>
        <TextView
            android:id="@+id/fragment_navigation_drawer_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAppearance="@android:color/secondary_text_dark_nodisable"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/fragment_navigation_drawer_user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAppearance="@android:color/secondary_text_dark_nodisable"
            android:typeface="serif"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/drawer_actions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/drawer_action_library"
                android:drawableLeft="@drawable/ic_action_library"
                android:drawableStart="@drawable/ic_action_library"
                style="@style/DrawerActionsHeadings"/>
            <LinearLayout
                style="@style/DrawerActionsHorizontalContainers">
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_books"
                    android:text="@string/drawer_action_books"
                    style="@style/DrawerActionsHorizontal"/>
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_notes"
                    android:text="@string/drawer_action_notes"
                    style="@style/DrawerActionsHorizontal"/>
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_pastpapers"
                    android:text="@string/drawer_action_pastpapers"
                    style="@style/DrawerActionsHorizontal"/>
            </LinearLayout>
            <TextView
                android:text="@string/drawer_action_timetable"
                android:drawableLeft="@drawable/ic_action_timetable"
                android:drawableStart="@drawable/ic_action_timetable"
                style="@style/DrawerActionsHeadings"/>
            <LinearLayout
                style="@style/DrawerActionsHorizontalContainers">
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_teaching_timetable"
                    android:text="@string/drawer_action_teaching"
                    style="@style/DrawerActionsHorizontal"/>
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_exam_timetable"
                    android:text="@string/drawer_action_exam"
                    style="@style/DrawerActionsHorizontal"/>
            </LinearLayout>
            <TextView
                android:text="@string/drawer_action_media"
                android:drawableLeft="@drawable/ic_action_news"
                android:drawableStart="@drawable/ic_action_news"
                style="@style/DrawerActionsHeadings"/>
            <LinearLayout
                style="@style/DrawerActionsHorizontalContainers">
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_news"
                    android:text="@string/drawer_action_news"
                    style="@style/DrawerActionsHorizontal"/>
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_events"
                    android:text="@string/drawer_action_events"
                    style="@style/DrawerActionsHorizontal"/>
                <TextView
                    android:id="@+id/fragment_navigation_drawer_action_gallery"
                    android:text="@string/drawer_action_gallery"
                    style="@style/DrawerActionsHorizontal"/>
            </LinearLayout>
            <TextView
                android:id="@+id/fragment_navigation_drawer_action_academics"
                android:text="@string/drawer_action_academics"
                android:drawableLeft="@drawable/ic_action_academics"
                android:drawableStart="@drawable/ic_action_academics"
                style="@style/DrawerActions"/>
            <TextView
                android:id="@+id/fragment_navigation_drawer_action_eclass"
                android:text="@string/drawer_action_eclass"
                android:drawableLeft="@drawable/ic_action_eclass"
                android:drawableStart="@drawable/ic_action_eclass"
                style="@style/DrawerActions"/>
            <TextView
                android:id="@+id/fragment_navigation_drawer_action_overstack"
                android:text="@string/drawer_action_exchange"
                android:drawableLeft="@drawable/ic_action_exchangee"
                android:drawableStart="@drawable/ic_action_exchangee"
                style="@style/DrawerActions"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/fragment_navigation_drawer_action_student_union"
                android:text="@string/drawer_action_student_union"
                android:drawableLeft="@drawable/ic_action_student_union"
                android:drawableStart="@drawable/ic_action_student_union"
                style="@style/DrawerActions"/>
            <TextView
                android:id="@+id/fragment_navigation_drawer_action_finance"
                android:text="@string/drawer_action_finance"
                android:drawableLeft="@drawable/ic_action_finance"
                android:drawableStart="@drawable/ic_action_finance"
                style="@style/DrawerActions"/>
            <TextView
                android:id="@+id/fragment_navigation_drawer_action_accomodation"
                android:text="@string/drawer_action_accomodation"
                android:drawableLeft="@drawable/ic_action_accomodation"
                android:drawableStart="@drawable/ic_action_accomodation"
                style="@style/DrawerActions"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/fragment_navigation_drawer_action_staff"
                android:text="@string/drawer_action_staff"
                android:drawableLeft="@drawable/ic_action_staff"
                android:drawableStart="@drawable/ic_action_staff"
                style="@style/DrawerActions"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/fragment_navigation_drawer_action_email"
                android:text="@string/drawer_action_email"
                android:drawableLeft="@drawable/ic_action_mail"
                android:drawableStart="@drawable/ic_action_mail"
                style="@style/DrawerActions"/>

            <TextView
                android:id="@+id/fragment_navigation_drawer_action_campus_map"
                android:text="@string/drawer_action_campus_map"
                android:drawableLeft="@drawable/ic_action_map"
                android:drawableStart="@drawable/ic_action_map"
                android:clickable="false"
                android:alpha="2"
                style="@style/DrawerActions"/>
            <TextView
                android:visibility="gone"
                android:text="@string/drawer_action_about"
                android:id="@+id/fragment_navigation_drawer_action_about"
                android:drawableLeft="@drawable/ic_action_aboutt"
                android:drawableStart="@drawable/ic_action_aboutt"
                style="@style/DrawerActions"/>

            <TextView
                android:text="@string/drawer_action_settings"
                android:id="@+id/fragment_navigation_drawer_action_settings"
                android:drawableLeft="@drawable/ic_action_settings"
                android:drawableStart="@drawable/ic_action_settings"
                style="@style/DrawerActions"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
